# icon-pie

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: logo.afphoto
examples/: borders.afphoto  concepts.afphoto  default_resample.afphoto  example.tar  example_1.afphoto  example_2.afphoto  example_3.afphoto  sources.afphoto
src/: main.rs
src/command/: mod.rs
src/error/: file.rs  mod.rs  show.rs  syntax.rs
src/eval/: mod.rs
src/parse/: combinators.rs  favicon.rs  icns.rs  ico.rs  mod.rs  token.rs
