[package]
name = "icon-pie"
version = "0.1.0-alpha"
authors = [
    "Pablo <pablo-escobar@riseup.net>",
    "Nicolas Girard <girard.nicolas@gmail.com>"
]
edition = "2018"
description = "A simple command-line tool for generating application icons."
license-file = "LICENSE"
repository = "https://github.com/GarkGarcia/icon-pie"
homepage = "https://github.com/GarkGarcia/icon-pie"
readme = "README.md"
keywords = ["cli", "icon", "ico", "icns"]
categories = ["command-line-utilities"]

[dependencies]
icon_baker = "3.2.0-beta.7"
crossterm = "0.7.0"
